--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
                <article class="flex-middle">
                   <img class="logo" src="./images/Triangle.png" alt="">
                   <div class="btn">
-                     <button class="button">
-                        <a href="https://trinityburger.papu.io/">ZAMÓW ONLINE
-                        </a>
-                     </button>
+                     <a class='button' href="https://trinityburger.papu.io/">ZAMÓW ONLINE</a>
                   </div>
                </article>
                <!-- Flex social -->
