--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
    <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href="mobile2.css">
+   <link rel="stylesheet" href="mobile.css">
    <script src="https://kit.fontawesome.com/52d81d373d.js" crossorigin="anonymous"></script>
    <title>Trinity Burger House | zamów ONLINE już dziś!</title>
 </head>
